# Foodie-Ecosystem

./: .env  .gitignore  .pre-commit-config.yaml  README.md  fastapi.sh  main.py  pyproject.toml
app/core/: config.py  database.py  logger.py
app/dependencies/: auth.py
app/models/: cart.py  category.py  delivery_info.py  item.py  order.py  user.py
app/routes/: __init__.py  cart.py  category.py  delivery_info.py  item.py  order.py  user.py
app/schema/: cart.py  category.py  delivery_info.py  item.py  order.py  user.py
app/service/: cart.py  category.py  delivery_info.py  item.py  order.py  user.py
