[project]
name = "foodie-ecosystem"
version = "0.1.0"
description = ""
authors = [
    {name = "shariq-productions",email = "shariqaftab444@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pymongo (>=4.13.0,<5.0.0)",
    "motor (>=3.7.1,<4.0.0)",
    "beanie (>=1.29.0,<2.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (==4.0.1)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.11.10"
pre-commit = "^4.2.0"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
httpx = "^0.28.1"

